tests/baselines/reference/typedefCrossModule2.errors.txt
tests/cases/conformance/jsdoc/mod1.js(3,23): error TS2300: Duplicate identifier 'Foo'.
tests/cases/conformance/jsdoc/mod1.js(4,7): error TS2300: Duplicate identifier 'Foo'.
tests/cases/conformance/jsdoc/mod1.js(6,23): error TS2300: Duplicate identifier 'Bar'.
tests/cases/conformance/jsdoc/mod1.js(7,9): error TS2300: Duplicate identifier 'Bar'.
tests/cases/conformance/jsdoc/mod1.js(9,5): error TS2300: Duplicate identifier 'Baz'.
tests/cases/conformance/jsdoc/mod1.js(10,1): error TS2304: Cannot find name 'module'.
tests/cases/conformance/jsdoc/mod1.js(11,5): error TS2300: Duplicate identifier 'Baz'.
tests/cases/conformance/jsdoc/mod1.js(23,1): error TS2304: Cannot find name 'module'.
tests/cases/conformance/jsdoc/use.js(1,11): error TS2304: Cannot find name 'require'.


==== tests/cases/conformance/jsdoc/use.js (1 errors) ====
    var mod = require('./mod1.js');
              ~~~~~~~
!!! error TS2304: Cannot find name 'require'.
    /** @type {import("./mod1.js").Baz} */
    var b;
    /** @type {mod.Baz} */
    var bb;
    var bbb = new mod.Baz();
    
==== tests/cases/conformance/jsdoc/mod1.js (8 errors) ====
    // error
    
    /** @typedef {number} Foo */
                          ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
    class Foo { } // should error
          ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
    
    /** @typedef {number} Bar */
                          ~~~
!!! error TS2300: Duplicate identifier 'Bar'.
    exports.Bar = class { }
            ~~~
!!! error TS2300: Duplicate identifier 'Bar'.
    
    /** @typedef {number} Baz */
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'Baz'.
    module.exports = {
    ~~~~~~
!!! error TS2304: Cannot find name 'module'.
        Baz: class { }
        ~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'Baz'.
    }
    
    // ok
    
    /** @typedef {number} Qux */
    var Qux = 2;
    
    /** @typedef {number} Quid */
    exports.Quid = 2;
    
    /** @typedef {number} Quack */
    module.exports = {
    ~~~~~~
!!! error TS2304: Cannot find name 'module'.
        Quack: 2
    }
    